--- a/aequilibrium-assessment-ios/Podfile
+++ b/aequilibrium-assessment-ios/Podfile
@@ -9,6 +9,7 @@ target 'aequilibrium-assessment-ios' do
 
   pod 'Alamofire'
   pod 'Kingfisher'
+  pod 'SwiftSpinner'
 
   target 'aequilibrium-assessment-iosTests' do
     inherit! :search_paths
